# tib-bloom-scraper

./: .gitignore  pyproject.toml
bloom_scraper/: book.py  book_list.py  cli.py  errors.py  scraper.py  util.py  web.py
